# book-keeper

./: .env  Cargo.toml  DB_DDL.sql  Makefile  book-keeper.http  build.rs  docker-compose.yaml
migrations/: 20230405055917_CREATE_BOOK.sql  20230805140910_CREATE_STUDENT.sql  20230805142110_CREATE_BORROW.sql
scripts/scylla/: check-scylla-startup.sh  initialize-scylla-db.sh
src/: config.rs  error.rs  lib.rs  main.rs  student.rs
src/book/: db.rs  handler.rs  model.rs
src/borrow/: db.rs  handler.rs  model.rs
src/config/: environment.rs  mod.rs  observability.rs
src/core/: state.rs
src/persistence/: mod.rs  scylla_db.rs
src/search/: mod.rs
src/student/: db.rs  handler.rs  model.rs
