[package]
name = "book-keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
cdrs-tokio = { version = "7.0.4", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
elasticsearch = "8.5.0-alpha.1"
envy = "0.4.2"
hyper = { version = "0.14.25", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
